Port original Sponge execution to CloudLab